# facetracker

./: .autorc  LICENSE.txt  README.md  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: docs.yaml  publish.yaml  test.yaml
facetracker/: cli.py  face_cluster.py  face_detector.py  face_tracker.py  scene_detector.py
tests/: test_app.py
